refactor(config): reorganize configuration components and add registries for loaders and providers
- Introduced LoadersRegistry and ProvidersRegistry for unified management of config loaders and providers
- Added ResourceExtensionResolver for extension-based resolution
- Simplified and refactored multiple configuration-related classes for consistency
- Improved path validation logic in ResourceNameValidator
- Added comprehensive unit tests for new and modified components:
  * ConfigFileFormatTest
  * ConfigurationTest
  * DefaultConfigResourceLocationBuilderTest
  * LoadersRegistryTest
  * ProvidersRegistryTest
  * ResourceExtensionResolverTest
  * ResourceNameValidatorTest
  * FilenameUtilsTest